# breakout

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml  test.yml
examples/: capture_levels.rs
src/: components.rs  constants.rs  lib.rs  main.rs  plugins.rs  resources.rs  states.rs  storage.rs  test_helpers.rs  utils.rs
src/systems/: audio.rs  collision.rs  combo.rs  countdown.rs  editor.rs  effects.rs  game_state.rs  input.rs  mod.rs  movement.rs  powerup.rs  scoring.rs  setup.rs
